add record slots
